kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: std-ext-010-34
spec:
  replicas: 1
  revisionHistoryLimit: 12
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ${CI_REGISTRY_IMAGE}/sausage-frontend:${VERSION}
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: frontend-config
            items:
              - key: default.conf
                path: default.conf
      imagePullSecrets:
        - name: docker-config-secret
