kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: std-ext-010-34
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - alimov-iskander-34.k8s.praktikum-services.tech
      secretName: frontend-tls
  rules:
    - host: alimov-iskander-34.k8s.praktikum-services.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
